Small fixes and Cart removal of products complete
Z-index fixed for some images not showing correctly on scroll, articles have been put in as an array of objects for ease of use

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -676,7 +676,7 @@ section {
             justify-content: center;
             gap: .5rem;
             background: rgba(242,242,242,0.7);
-            z-index: 10;
+            z-index: 5;
             
             a{
                 box-shadow: $box-shadow;
